# aws-terminator

./: .gitignore  CONTRIBUTING.md  LICENSE  PERMISSIONS.md  README.md  aws_eraser.py  aws_terminator.py  pyproject.toml  run.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
